# static-ref

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs
